chore(public-ui): sync layout fallback and fix templates dir

--- a/frontend/templates/layout/base.html
+++ b/frontend/templates/layout/base.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Inter:wght@400;500;600&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ css_href }}">
+    <link rel="stylesheet" href="{{ css_href | default('/static/scss/base.css') }}">
     {% block head %}{% endblock %}
   </head>
   <body>
